# FreeRTOS_Gesture

./: CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
Core/Startup/: startup_stm32f446retx.c
FreeRTOS/: tasks.c
Includes/: FreeRTOSConfig.h  gpio.h  i2c.h  mpu6050.h  uart.h
Sources/: gpio.c  i2c.c  main.c  mpu6050.c  uart.c
